@@ -17,3 +17,4 @@ Added wrap for search replace.
 Dim function menu when no functions available.
 Apply prefs immedietly.
 Added save search wrap mode
+Removed 'Save-As' from toolbar.
